# serializer version: 1
# name: TestCreate.test_ok[force_choice][mongo]
  dict({
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': 2,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'apple',
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestCreate.test_ok[none][mongo]
  dict({
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'apple',
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestCreate.test_ok[users_primary_group][mongo]
  dict({
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': 'approximately_now_datetime',
    'format': 'fastq',
    'group': 2,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'apple',
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
